ext/libhartonomous/include/hartonomous.h


typedef struct hartonomous_runtime_info {
    int  has_mkl;
    char mkl_version[128];
    int  mkl_max_threads;
    int  omp_max_threads;
    int  cbwr_branch;
} hartonomous_runtime_info_t;
HARTONOMOUS_API void hartonomous_runtime_info(hartonomous_runtime_info_t* out);
HARTONOMOUS_API void hartonomous_blake3(
    const uint8_t* data,
    size_t len,
    uint8_t out[HARTONOMOUS_HASH_LEN]
);
typedef struct hartonomous_blake3_state {
    uint8_t _opaque[2048];
} hartonomous_blake3_state;
HARTONOMOUS_API void hartonomous_blake3_init(hartonomous_blake3_state* state);
HARTONOMOUS_API void hartonomous_blake3_update(
    hartonomous_blake3_state* state,
    const uint8_t* data,
    size_t len
);
HARTONOMOUS_API void hartonomous_blake3_finalize(
    const hartonomous_blake3_state* state,
    uint8_t out[HARTONOMOUS_HASH_LEN]
);
HARTONOMOUS_API int hartonomous_blake3_many(
    const uint8_t* const* inputs,
    const size_t* input_lens,
    int64_t n,
    uint8_t* output
);
HARTONOMOUS_API double hartonomous_s3_distance(
    const double p1[4],
    const double p2[4]
);
HARTONOMOUS_API int hartonomous_s3_centroid(
    const double* points,
    size_t point_count,
    double out[4]
);
HARTONOMOUS_API int hartonomous_karcher_mean_s3(
    const double* points,
    size_t        point_count,
    int           max_iter,
    double        tol,
    double        out[4]
);
HARTONOMOUS_API int hartonomous_super_fibonacci(
    const double* params,
    size_t ndims,
    double out[4]
);
HARTONOMOUS_API int hartonomous_super_fibonacci_many(
    const double* indices,
    int64_t n,
    double total,
    double* out
);
HARTONOMOUS_API uint64_t hartonomous_hilbert_index(
    const double point[4],
    int order
);
HARTONOMOUS_API int hartonomous_hilbert_inverse(
    uint64_t index,
    int order,
    double out[4]
);
HARTONOMOUS_API int hartonomous_tensor_decode_f64(
    const void* src, size_t src_bytes,
    int src_dtype,
    double* dst, int64_t dst_count
);
HARTONOMOUS_API int hartonomous_gemm_f64(
    int op_a, int op_b,
    int64_t m, int64_t n, int64_t k,
    double alpha,
    const double* a, int64_t lda,
    const double* b, int64_t ldb,
    double beta,
    double* c, int64_t ldc
);
HARTONOMOUS_API int hartonomous_svd_f64(
    int64_t m, int64_t n,
    const double* a,
    double* u,
    double* s,
    double* vt
);
HARTONOMOUS_API int hartonomous_procrustes_f64(
    int64_t d, int64_t n,
    const double* x,
    const double* y,
    double* rotation,
    double* out_residual
);
HARTONOMOUS_API int hartonomous_knearest_exact_f64(
    int64_t nq, int64_t nc, int64_t d,
    const double* queries,
    const double* corpus,
    int64_t k,
    int64_t* out_indices,
    double* out_distances
);
HARTONOMOUS_API int hartonomous_laplacian_eigenmap_f64(
    int64_t n, int64_t nnz,
    const int64_t* row_ptr,
    const int64_t* col_idx,
    const double*  values,
    int64_t k,
    int64_t max_iter,
    uint64_t seed,
    double* out_eigenvalues,
    double* out_eigenvectors,
    int64_t* out_iters
);
HARTONOMOUS_API int hartonomous_kmeans_plusplus_f64(
    int64_t n, int64_t d, int64_t k,
    const double* points,
    int64_t max_iter,
    uint64_t seed,
    int64_t* out_assignments,
    double*  out_centers,
    int64_t* out_iters
);
HARTONOMOUS_API int hartonomous_delaunay_4d_f64(
    int64_t n,
    const double* points,
    int64_t* out_simplex_count,
    int64_t* out_simplices,
    int64_t  out_capacity
);
HARTONOMOUS_API int hartonomous_knn_cosine_graph_f64(
    int64_t n, int64_t d,
    const double* rows_normalized,
    int64_t k,
    int64_t* out_row_ptr,
    int64_t* out_col_idx,
    double*  out_values,
    int64_t* out_nnz
);
HARTONOMOUS_API int hartonomous_sparse_sym_eigs_f64(
    int64_t n, int64_t nnz,
    const int64_t* row_ptr,
    const int64_t* col_idx,
    const double* values,
    int64_t k,
    int64_t max_iter,
    uint64_t seed,
    double* eigenvalues,
    double* eigenvectors,
    int64_t* out_iters
);
HARTONOMOUS_API int hartonomous_gram_schmidt_f64(
    int64_t k, int64_t n,
    double* vectors, int64_t ld
);
HARTONOMOUS_API int hartonomous_blake3_merkle(
    const uint8_t* child_hashes, size_t child_count,
    uint8_t output[HARTONOMOUS_HASH_LEN]
);
HARTONOMOUS_API int hartonomous_centroid_4d(
    const double* points, size_t point_count, double out[4]
);
HARTONOMOUS_API int hartonomous_centroid_4d_grouped(
    const double* points,
    const int64_t* group_ids,
    int64_t n,
    int64_t group_count,
    double* centroids
);